[package]
name = "example"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imguizmo = { path = "../imguizmo" }
futures = "0.3"
imgui = { git = "https://github.com/TrevTV/imgui-rs.git", features = [ "docking" ] }
imgui-winit-support = { git = "https://github.com/TrevTV/imgui-rs.git" }
imgui-glium-renderer = { git = "https://github.com/TrevTV/imgui-rs.git" }
glium = { git = "https://github.com/TrevTV/glium.git" }
winit = "0.28"
raw-window-handle = "0.3"
env_logger = "0.7"
cgmath = "0.17"