[package]
name = "imguizmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { git = "https://github.com/TrevTV/imgui-rs.git", features = [ "docking" ] }
imguizmo-sys = { path = "../imguizmo-sys" }